# trajkit

./: .gitignore  ACKNOWLEDGMENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  mkdocs.yml  pyproject.toml
configs/: default.yaml
docs/: conf.py  getting-started.md  index.md  index.rst  reference.bib  requirements.txt
docs/_build/: .buildinfo  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  getting-started.doctree  index.doctree
docs/_build/_modules/: index.html
docs/_build/_sources/: index.md.txt
docs/concepts/: index.md  trajectories.md
docs/getting_started/: data_model.rst  examples.rst  installation.rst  quickstart.rst
docs/reference/: index.md  index.rst  trajkit.cdv.rst  trajkit.flow.rst  trajkit.io.rst  trajkit.rst  trajkit.stats.rst  trajkit.traj.rst
docs/stylesheets/: extra.css
docs/tools/: cdv_flow_inference.rst  two_point_microrheology copy.rst  two_point_microrheology.md  two_point_microrheology.rst
docs/tutorials/: cdv_example_thermal.rst  first-notebook.md  index.md
docs/visualization/: emulsion_3d.rst  index.rst
examples/notebooks/: cdv_displacement.ipynb  cdv_in_action.ipynb  csvCreater.ipynb  msd_example.ipynb  tutorial_TwoPoint_01.ipynb  tutorial_cdv_01.ipynb  tutorial_cdv_in_action copy.ipynb  twopoint_fordoc.ipynb  twopoint_microrheology.ipynb  wrapper_for_correlation.ipynb
examples/trajectories/: Trajectory_StableDistribution.ipynb
examples/visualization/: Trajectory_StableDistribution.ipynb
src/trajkit/: __init__.py
tests/: conftest.py  test_cdv_accumulate.py  test_cdv_corr.py  test_cdv_measurements.py  test_cdv_run_cdv.py  test_smoke.py  test_stats_msd.py  test_traj_from_dataframe.py
(+51 files in other folders)
